# image-shrinker-lite

./: .gitignore  Cargo.toml  README.md  build.rs  main.js
lite/: Cargo.toml  main.htm  script.tis  styles.css
lite/assets/css/: results.css  toggle.css  x.css
lite/assets/tis/: drag_and_drop.tis  moveable_view.tis  results.tis
lite/src/: jpg.rs  main.rs  misc.rs  png.rs
src/: main.rs  misc.rs
