[package]
name = "image-shrinker-lite"
version = "0.1.0"
authors = ["GirkovArpa <girkovarpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"
imagequant = "2.11.9"
lodepng = "2.4.2"
flate2 = "1.0.7"
mozjpeg = "0.8.24"